--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -242,15 +242,11 @@ ul {
         position: absolute;
         font-family: "Poppins", system-ui;
         font-weight: 600;
-        font-style: italic;
-        font-size: 90px;
+        font-style: italic;        
         color: #fff;
         white-space: nowrap;
-        bottom: 8.5vh;
-        @include mq(md-max) {
-            font-size: 50px;
-            bottom: 1vh;
-        }
+        font-size: clamp(40px, 1vw, 90px);     
+        
     }
     .banner {
         &__img {
